cabal-version: 1.12
name:          cargohold-types
version:       1.5.0
synopsis:      Asset Storage API Types
description:   API Types for the CargoHold service.
author:        Wire Swiss GmbH
maintainer:    Wire Swiss GmbH <backend@wire.com>
copyright:     (c) 2017 Wire Swiss GmbH
license:       AGPL-3
license-file:  LICENSE
build-type:    Simple

library
  exposed-modules:
    CargoHold.Types
    CargoHold.Types.V3

  other-modules:      Paths_cargohold_types
  hs-source-dirs:     src
  default-extensions:
    NoImplicitPrelude
    AllowAmbiguousTypes
    BangPatterns
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    EmptyCase
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NamedFieldPuns
    OverloadedStrings
    PackageImports
    PatternSynonyms
    PolyKinds
    QuasiQuotes
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeFamilies
    TypeFamilyDependencies
    TypeOperators
    UndecidableInstances
    ViewPatterns

  ghc-options:
    -O2 -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wpartial-fields -fwarn-tabs -optP-Wno-nonportable-include-path
    -Wredundant-constraints

  build-depends:
      base                   >=4    && <5
    , bytestring-conversion  >=0.2
    , imports
    , types-common           >=0.16
    , wire-api

  default-language:   Haskell2010
