name:                   cassandra-util
version:                0.16.5
license:                OtherLicense
synopsis:               Cassandra Utilities
category:               Database, Zeta
build-type:             Simple
cabal-version:          >= 1.10

library
    hs-source-dirs:     src
    default-language:   Haskell2010
    ghc-options:        -Wall -O2 -fwarn-tabs

    exposed-modules:
        Cassandra
      , Cassandra.CQL
      , Cassandra.Exec
      , Cassandra.Schema
      , Cassandra.Settings

    build-depends:
        aeson                >= 0.7
      , base                 >= 4.6     && < 5.0
      , cql                  >= 3.0.0
      , cql-io               >= 0.14
      , errors               >= 1.4
      , exceptions           >= 0.6
      , lens                 >= 4.4
      , lens-aeson           >= 1.0
      , optparse-applicative >= 0.10
      , semigroups           >= 0.15
      , split                >= 0.2
      , text                 >= 0.11
      , time                 >= 1.4
      , transformers         >= 0.3
      , tinylog              >= 0.7
      , wreq                 >= 0.2

