cabal-version: 1.12
name:          cassandra-util
version:       0.16.5
synopsis:      Cassandra Utilities
category:      Database
author:        Wire Swiss GmbH
maintainer:    Wire Swiss GmbH <backend@wire.com>
copyright:     (c) 2017 Wire Swiss GmbH
license:       AGPL-3
license-file:  LICENSE
build-type:    Simple

library
  exposed-modules:
    Cassandra
    Cassandra.QQ
    Cassandra.CQL
    Cassandra.Exec
    Cassandra.Helpers
    Cassandra.MigrateSchema
    Cassandra.Options
    Cassandra.Schema
    Cassandra.Settings
    Cassandra.Util

  other-modules:      Paths_cassandra_util
  hs-source-dirs:     src
  default-extensions:
    AllowAmbiguousTypes
    BangPatterns
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    EmptyCase
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NamedFieldPuns
    NoImplicitPrelude
    NumericUnderscores
    OverloadedRecordDot
    OverloadedStrings
    PackageImports
    PatternSynonyms
    PolyKinds
    QuasiQuotes
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeFamilies
    TypeFamilyDependencies
    TypeOperators
    UndecidableInstances
    ViewPatterns

  ghc-options:
    -O2 -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wpartial-fields -fwarn-tabs -optP-Wno-nonportable-include-path
    -Wredundant-constraints -Wunused-packages

  build-depends:
      aeson                 >=2.0.1.0
    , base                  >=4.6     && <5.0
    , conduit
    , cql                   >=3.0.0
    , cql-io                >=0.14
    , cql-io-tinylog
    , exceptions            >=0.6
    , HsOpenSSL
    , imports
    , lens                  >=4.4
    , lens-aeson            >=1.0
    , template-haskell
    , optparse-applicative  >=0.10
    , retry
    , split                 >=0.2
    , text                  >=0.11
    , time                  >=1.4
    , tinylog               >=0.7
    , uuid
    , wreq                  >=0.2

  default-language:   GHC2021
