cabal-version: 1.12
name:          extended
version:       0.1.0
synopsis:      Extended versions of common modules
description:
  .Extended versions of various libraries from Hackage. See
  https://jaspervdj.be/posts/2015-01-20-haskell-design-patterns-extended-modules.html
  for a description of this design pattern.

category:      Utilities
stability:     experimental
author:        Wire Swiss GmbH
maintainer:    Wire Swiss GmbH <backend@wire.com>
copyright:     (c) 2018 Wire Swiss GmbH
license:       AGPL-3
license-file:  LICENSE
build-type:    Simple

library
  -- cabal-fmt: expand src
  exposed-modules:
    Network.AMQP.Extended
    Network.RabbitMqAdmin
    Options.Applicative.Extended
    Servant.API.Extended
    Servant.API.Extended.RawM
    System.Logger.Extended

  other-modules:      Paths_extended
  hs-source-dirs:     src
  default-extensions:
    NoImplicitPrelude
    AllowAmbiguousTypes
    BangPatterns
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    EmptyCase
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NamedFieldPuns
    NumericUnderscores
    OverloadedRecordDot
    OverloadedStrings
    PackageImports
    PatternSynonyms
    PolyKinds
    QuasiQuotes
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeFamilies
    TypeFamilyDependencies
    TypeOperators
    UndecidableInstances
    ViewPatterns

  ghc-options:
    -O2 -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wpartial-fields -fwarn-tabs -optP-Wno-nonportable-include-path
    -Wredundant-constraints -Wunused-packages

  build-depends:
      aeson
    , amqp
    , base
    , bytestring
    , cassandra-util
    , containers
    , errors
    , exceptions
    , extra
    , http-client
    , http-types
    , imports
    , metrics-wai
    , monad-control
    , optparse-applicative
    , resourcet
    , retry
    , servant
    , servant-client
    , servant-client-core
    , servant-server
    , servant-swagger
    , text
    , tinylog
    , unliftio
    , wai

  default-language:   Haskell2010

test-suite extended-tests
  type:               exitcode-stdio-1.0
  main-is:            Spec.hs
  other-modules:
    Paths_extended
    Test.System.Logger.ExtendedSpec

  hs-source-dirs:     test
  default-extensions:
    NoImplicitPrelude
    AllowAmbiguousTypes
    BangPatterns
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    EmptyCase
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NamedFieldPuns
    OverloadedRecordDot
    OverloadedStrings
    PackageImports
    PatternSynonyms
    PolyKinds
    QuasiQuotes
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeFamilies
    TypeFamilyDependencies
    TypeOperators
    UndecidableInstances
    ViewPatterns

  ghc-options:
    -O2 -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wpartial-fields -fwarn-tabs -optP-Wno-nonportable-include-path
    -threaded -with-rtsopts=-N -Wredundant-constraints
    -Wunused-packages

  build-tool-depends: hspec-discover:hspec-discover
  build-depends:
      aeson
    , base
    , extended
    , hspec
    , imports
    , temporary

  default-language:   Haskell2010
