cabal-version: 1.12
name:          extended
version:       0.1.0
synopsis:      Extended versions of common modules
description:
  .Extended versions of various libraries from Hackage. See
  <https://jaspervdj.be/posts/2015-01-20-haskell-design-patterns-extended-modules.html>
  for a description of this design pattern.

category:      Utilities
stability:     experimental
author:        Wire Swiss GmbH
maintainer:    Wire Swiss GmbH <backend@wire.com>
copyright:     (c) 2018 Wire Swiss GmbH
license:       AGPL-3
license-file:  LICENSE
build-type:    Simple

-- This flags removes build-tool-depends when compiling things in the dev
-- environment.
-- https://github.com/NixOS/nixpkgs/issues/130556#issuecomment-2762237786
flag nix-dev-env
  description: In a Nix dev environment.
  default:     False
  manual:      True

library
  -- cabal-fmt: expand src
  exposed-modules:
    Data.Time.Clock.DiffTime
    Data.X509.Extended
    Hasql.Pool.Extended
    Network.AMQP.Extended
    Network.RabbitMqAdmin
    Servant.API.Extended
    Servant.API.Extended.Endpath
    System.Logger.Extended

  other-modules:      Paths_extended
  hs-source-dirs:     src
  default-extensions:
    AllowAmbiguousTypes
    BangPatterns
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    EmptyCase
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NamedFieldPuns
    NoImplicitPrelude
    NumericUnderscores
    OverloadedRecordDot
    OverloadedStrings
    PackageImports
    PatternSynonyms
    PolyKinds
    QuasiQuotes
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeFamilies
    TypeFamilyDependencies
    TypeOperators
    UndecidableInstances
    ViewPatterns

  ghc-options:
    -O2 -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wpartial-fields -fwarn-tabs -optP-Wno-nonportable-include-path
    -Wredundant-constraints -Wunused-packages

  build-depends:
      aeson
    , amqp
    , asn1-types
    , base
    , bytestring
    , cassandra-util
    , containers
    , crypton
    , crypton-connection
    , crypton-x509
    , crypton-x509-store
    , data-default
    , errors
    , exceptions
    , hasql
    , hasql-pool
    , http-client
    , http-client-tls
    , http-types
    , imports
    , memory
    , metrics-wai
    , monad-control
    , prometheus-client
    , retry
    , servant
    , servant-client
    , servant-client-core
    , servant-openapi3
    , servant-server
    , text
    , time
    , tinylog
    , tls
    , transformers
    , types-common
    , unliftio
    , uuid
    , wai

  default-language:   GHC2021

test-suite extended-tests
  type:               exitcode-stdio-1.0
  main-is:            Spec.hs
  other-modules:
    Paths_extended
    Test.Data.X509.ExtendedSpec
    Test.System.Logger.ExtendedSpec

  hs-source-dirs:     test
  default-extensions:
    AllowAmbiguousTypes
    BangPatterns
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    EmptyCase
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NamedFieldPuns
    NoImplicitPrelude
    OverloadedRecordDot
    OverloadedStrings
    PackageImports
    PatternSynonyms
    PolyKinds
    QuasiQuotes
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeFamilies
    TypeFamilyDependencies
    TypeOperators
    UndecidableInstances
    ViewPatterns

  ghc-options:
    -O2 -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wpartial-fields -fwarn-tabs -optP-Wno-nonportable-include-path
    -threaded -with-rtsopts=-N -Wredundant-constraints
    -Wunused-packages

  if !flag(nix-dev-env)
    build-tool-depends: hspec-discover:hspec-discover

  build-depends:
      aeson
    , asn1-types
    , base
    , bytestring
    , crypton
    , crypton-pem
    , crypton-x509
    , extended
    , hourglass
    , hspec
    , imports
    , string-conversions
    , temporary

  default-language:   GHC2021
