name:          galley-types
version:       0.81.0
author:        Wire Swiss GmbH
maintainer:    Wire Swiss GmbH <backend@wire.com>
copyright:     (c) 2017 Wire Swiss GmbH
license:       AGPL-3
license-file:  LICENSE
category:      Network
build-type:    Simple
cabal-version: >= 1.10
description:   API types of Galley.

flag cql
    description: Enable cql instances
    default:     False

library
    default-language: Haskell2010
    default-extensions:
        NoImplicitPrelude
      , AllowAmbiguousTypes
      , BangPatterns
      , ConstraintKinds
      , DataKinds
      , DefaultSignatures
      , DeriveFunctor
      , DeriveGeneric
      , DeriveLift
      , DeriveTraversable
      , EmptyCase
      , FlexibleContexts
      , FlexibleInstances
      , FunctionalDependencies
      , GADTs
      , InstanceSigs
      , KindSignatures
      , LambdaCase
      , MultiParamTypeClasses
      , MultiWayIf
      , NamedFieldPuns
      , NoImplicitPrelude
      , OverloadedStrings
      , PackageImports
      , PatternSynonyms
      , PolyKinds
      , QuasiQuotes
      , RankNTypes
      , ScopedTypeVariables
      , StandaloneDeriving
      , TemplateHaskell
      , TupleSections
      , TypeApplications
      , TypeFamilies
      , TypeFamilyDependencies
      , TypeOperators
      , UndecidableInstances
      , ViewPatterns
    hs-source-dirs:   src
    ghc-options:      -Wall -O2 -fwarn-tabs

    exposed-modules:
        Galley.Types
        Galley.Types.Bot
        Galley.Types.Bot.Service
        Galley.Types.Bot.Service.Internal
        Galley.Types.Proto
        Galley.Types.Swagger
        Galley.Types.Teams
        Galley.Types.Teams.Internal
        Galley.Types.Teams.Intra
        Galley.Types.Teams.Swagger

    if flag(cql)
        cpp-options:   "-DWITH_CQL"
        build-depends: cql >= 3.0

    build-depends:
        aeson                 >= 0.6
      , attoparsec            >= 0.10
      , base                  >= 4     && < 5
      , base64-bytestring     >= 1.0
      , bytestring            >= 0.9
      , bytestring-conversion >= 0.2
      , containers            >= 0.5
      , currency-codes        >= 2.0
      , data-default          >= 0.5
      , gundeck-types         >= 1.15.13
      , errors
      , exceptions            >= 0.10.0
      , lens                  >= 4.12
      , protobuf              >= 0.2
      , swagger               >= 0.1
      , text                  >= 0.11
      , time                  >= 1.4
      , transformers          >= 0.3
      , types-common          >= 0.16
      , unordered-containers  >= 0.2
      , uri-bytestring        >= 0.2
      , uuid                  >= 1.3
      , imports

test-suite galley-types-tests
    type: exitcode-stdio-1.0
    hs-source-dirs: test/unit
    main-is: Main.hs

    other-modules:
        Test.Galley.Types

    build-depends:
        base
      , imports
      , galley-types
      , lens
      , tasty
      , tasty-hunit
      , types-common
      , containers

    ghc-options:
        -Wall
        -threaded
        -with-rtsopts=-N

    default-language: Haskell2010
    default-extensions:
        NoImplicitPrelude
      , AllowAmbiguousTypes
      , BangPatterns
      , ConstraintKinds
      , DataKinds
      , DefaultSignatures
      , DeriveFunctor
      , DeriveGeneric
      , DeriveLift
      , DeriveTraversable
      , EmptyCase
      , FlexibleContexts
      , FlexibleInstances
      , FunctionalDependencies
      , GADTs
      , InstanceSigs
      , KindSignatures
      , LambdaCase
      , MultiParamTypeClasses
      , MultiWayIf
      , NamedFieldPuns
      , NoImplicitPrelude
      , OverloadedStrings
      , PackageImports
      , PatternSynonyms
      , PolyKinds
      , QuasiQuotes
      , RankNTypes
      , ScopedTypeVariables
      , StandaloneDeriving
      , TemplateHaskell
      , TupleSections
      , TypeApplications
      , TypeFamilies
      , TypeFamilyDependencies
      , TypeOperators
      , UndecidableInstances
      , ViewPatterns
