cabal-version: 1.12
name:          galley-types
version:       0.81.0
description:   API types of Galley.
category:      Network
author:        Wire Swiss GmbH
maintainer:    Wire Swiss GmbH <backend@wire.com>
copyright:     (c) 2017 Wire Swiss GmbH
license:       AGPL-3
license-file:  LICENSE
build-type:    Simple

library
  exposed-modules:
    Galley.Types
    Galley.Types.Bot
    Galley.Types.Bot.Service
    Galley.Types.Conversations.Intra
    Galley.Types.Conversations.Members
    Galley.Types.Conversations.One2One
    Galley.Types.Conversations.Roles
    Galley.Types.Teams
    Galley.Types.Teams.Intra

  other-modules:      Paths_galley_types
  hs-source-dirs:     src
  default-extensions:
    NoImplicitPrelude
    AllowAmbiguousTypes
    BangPatterns
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    EmptyCase
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NamedFieldPuns
    OverloadedStrings
    PackageImports
    PatternSynonyms
    PolyKinds
    QuasiQuotes
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeFamilies
    TypeFamilyDependencies
    TypeOperators
    UndecidableInstances
    ViewPatterns

  ghc-options:
    -O2 -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wpartial-fields -fwarn-tabs -optP-Wno-nonportable-include-path
    -Wredundant-constraints

  build-depends:
      aeson                  >=2.0.1.0
    , base                   >=4       && <5
    , bytestring
    , bytestring-conversion
    , containers             >=0.5
    , cryptonite
    , currency-codes         >=2.0
    , errors
    , exceptions             >=0.10.0
    , imports
    , lens                   >=4.12
    , memory
    , QuickCheck
    , schema-profunctor
    , string-conversions
    , swagger2
    , tagged
    , text                   >=0.11
    , time                   >=1.4
    , types-common           >=0.16
    , uuid
    , wire-api

  default-language:   Haskell2010

test-suite galley-types-tests
  type:               exitcode-stdio-1.0
  main-is:            Main.hs
  other-modules:
    Paths_galley_types
    Test.Galley.Roundtrip
    Test.Galley.Types

  hs-source-dirs:     test/unit
  default-extensions:
    NoImplicitPrelude
    AllowAmbiguousTypes
    BangPatterns
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    EmptyCase
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NamedFieldPuns
    OverloadedStrings
    PackageImports
    PatternSynonyms
    PolyKinds
    QuasiQuotes
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeFamilies
    TypeFamilyDependencies
    TypeOperators
    UndecidableInstances
    ViewPatterns

  ghc-options:
    -O2 -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wpartial-fields -fwarn-tabs -optP-Wno-nonportable-include-path
    -threaded -with-rtsopts=-N -Wredundant-constraints

  build-depends:
      aeson
    , base
    , containers
    , galley-types
    , imports
    , lens
    , QuickCheck
    , tasty
    , tasty-hunit
    , tasty-quickcheck
    , types-common
    , wire-api

  default-language:   Haskell2010
