cabal-version: 1.12
name:          galley-types
version:       0.81.0
description:   API types of Galley.
category:      Network
author:        Wire Swiss GmbH
maintainer:    Wire Swiss GmbH <backend@wire.com>
copyright:     (c) 2017 Wire Swiss GmbH
license:       AGPL-3
license-file:  LICENSE
build-type:    Simple

library
  -- cabal-fmt: expand src
  exposed-modules:
    Galley.Types
    Galley.Types.Bot
    Galley.Types.Bot.Service
    Galley.Types.Conversations.Members
    Galley.Types.Conversations.One2One
    Galley.Types.Conversations.Roles
    Galley.Types.Teams

  other-modules:      Paths_galley_types
  hs-source-dirs:     src
  default-extensions:
    AllowAmbiguousTypes
    BangPatterns
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    EmptyCase
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NamedFieldPuns
    NoImplicitPrelude
    OverloadedRecordDot
    OverloadedStrings
    PackageImports
    PatternSynonyms
    PolyKinds
    QuasiQuotes
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeFamilies
    TypeFamilyDependencies
    TypeOperators
    UndecidableInstances
    ViewPatterns

  ghc-options:
    -O2 -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wpartial-fields -fwarn-tabs -optP-Wno-nonportable-include-path
    -Wredundant-constraints -Wunused-packages

  build-depends:
      aeson                  >=2.0.1.0
    , base                   >=4       && <5
    , bytestring
    , bytestring-conversion
    , containers             >=0.5
    , crypton
    , errors
    , imports
    , lens                   >=4.12
    , memory
    , QuickCheck
    , schema-profunctor
    , text                   >=0.11
    , types-common           >=0.16
    , uuid
    , wire-api

  default-language:   GHC2021
