name:           gundeck-types
version:        1.45.0
author:         Wire Swiss GmbH
maintainer:     Wire Swiss GmbH <backend@wire.com>
copyright:      (c) 2017 Wire Swiss GmbH
license:        AGPL-3
license-file:   LICENSE
category:       Network
build-type:     Simple
cabal-version:  >= 1.10
description:    API types of Gundeck.

library
    default-language:   Haskell2010
    hs-source-dirs:     src

    exposed-modules:
          Gundeck.Types
        , Gundeck.Types.Common
        , Gundeck.Types.Event
        , Gundeck.Types.Notification
        , Gundeck.Types.Presence
        , Gundeck.Types.Push
        , Gundeck.Types.Push.V2
        , Gundeck.Types.Swagger

    build-depends:
          aeson                 >= 0.6
        , attoparsec            >= 0.10
        , base                  >= 4     && < 5
        , base64-bytestring     >= 1.0
        , bytestring            >= 0.10
        , bytestring-conversion >= 0.2
        , containers            >= 0.5
        , lens                  >= 4.11
        , network-uri           >= 2.6
        , text                  >= 0.11
        , time                  >= 1.5
        , types-common          >= 0.16
        , swagger               >= 0.1
        , unordered-containers  >= 0.2

    ghc-options:
        -Wall
        -O2
        -fwarn-tabs
