cabal-version: 1.12
name:          gundeck-types
version:       1.45.0
description:   API types of Gundeck.
category:      Network
author:        Wire Swiss GmbH
maintainer:    Wire Swiss GmbH <backend@wire.com>
copyright:     (c) 2017 Wire Swiss GmbH
license:       AGPL-3
license-file:  LICENSE
build-type:    Simple

library
  exposed-modules:
    Gundeck.Types
    Gundeck.Types.Common
    Gundeck.Types.Event
    Gundeck.Types.Presence
    Gundeck.Types.Push
    Gundeck.Types.Push.V2

  other-modules:      Paths_gundeck_types
  hs-source-dirs:     src
  default-extensions:
    AllowAmbiguousTypes
    BangPatterns
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    EmptyCase
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NamedFieldPuns
    NoImplicitPrelude
    OverloadedRecordDot
    OverloadedStrings
    PackageImports
    PatternSynonyms
    PolyKinds
    QuasiQuotes
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeFamilies
    TypeFamilyDependencies
    TypeOperators
    UndecidableInstances
    ViewPatterns

  ghc-options:
    -O2 -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wpartial-fields -fwarn-tabs -optP-Wno-nonportable-include-path
    -Wredundant-constraints -Wunused-packages

  build-depends:
      aeson                  >=2.0.1.0
    , attoparsec             >=0.10
    , base                   >=4       && <5
    , bytestring             >=0.10
    , bytestring-conversion  >=0.2
    , containers             >=0.5
    , imports
    , lens                   >=4.11
    , network-uri            >=2.6
    , servant
    , text                   >=0.11
    , types-common           >=0.16
    , wire-api

  default-language:   GHC2021
